Second attempt to fix overflow

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -416,7 +416,7 @@ pre {
   line-height: 1.42;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 24px;
   border-radius: 3px;
-  overflow-wrap: break-word;
+  overflow-wrap: scroll;
   white-space: pre-wrap;
   padding: 1rem;
 }
